chore: move noir logic to different folder

--- a/noir_logic/monty_hall_test/Nargo.toml
+++ b/noir_logic/monty_hall_test/Nargo.toml
@@ -5,4 +5,4 @@ authors = ["TACEO"]
 compiler_version = ">=1.0.0"
 
 [dependencies]
-monty_hall = { path = "../noir_logic" }
+monty_hall = { path = "../monty_hall" }
