--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -21,5 +21,5 @@ uuid = { version = "1.15.1" }
 eyre = { version = "0.6.12" }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-
 tokio = { version = "1.44.1", features = ["full"] }
+crypto_box = {version ="0.9.1", features = ["chacha20"] }
