feat: more ae_encryptions and move to pss_utils

--- a/noir_logic/pss_utils/Nargo.toml
+++ b/noir_logic/pss_utils/Nargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "monty_hall"
+name = "pss_utils"
 type = "lib"
 authors = ["TACEO"]
 compiler_version = ">=1.0.0"
 
 [dependencies]
-pss_utils = { path = "../pss_utils" }
